<?xml version="1.0" encoding="UTF-8"?>
<!--

    SPDX-License-Identifier: MIT
    See LICENSE file for details.

    Copyright 2010-2026 The Waffle Project Contributors: https://github.com/Waffle/waffle/graphs/contributors

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.waffle.demo.jakarta</groupId>
        <artifactId>waffle-demo-parent-jakarta</artifactId>
        <version>3.6.1-SNAPSHOT</version>
    </parent>

    <groupId>com.github.waffle.demo.jakarta</groupId>
    <artifactId>waffle-demo-spring-boot-filter4</artifactId>
    <version>3.6.1-SNAPSHOT</version>

    <name>waffle-demo-spring-boot-filter4</name>
    <description>Spring Boot Filter 4 Demo for WAFFLE</description>
    <url>https://waffle.github.io/waffle/</url>

    <scm>
        <connection>scm:git:ssh://git@github.com/waffle/waffle.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/waffle/waffle.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/Waffle/waffle</url>
    </scm>

    <properties>
        <!-- Maven compiler options -->
        <java.version>17</java.version>
        <java.release.version>17</java.release.version>

        <!-- Dependencies -->
        <logback.version>1.5.32</logback.version>
        <spring-boot.version>4.0.6</spring-boot.version>

        <!-- Automatic Module Name for JPMS -->
        <module.name>waffle.demo.spring.boot.filter4</module.name>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.waffle</groupId>
                <artifactId>waffle-spring-boot-starter4</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.github.waffle</groupId>
            <artifactId>waffle-jna-jakarta</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.waffle</groupId>
            <artifactId>waffle-spring-boot-starter4</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-jcl</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <configuration>
                        <rules>
                            <enforceBytecodeVersion>
                                <excludes>
                                    <!-- Openssl contains panama for jdk 22 or higher if enabled via listener 'org.apache.catalina.core.OpenSSLLifecycleListener' -->
                                    <exclude>org.apache.tomcat.embed:tomcat-embed-core</exclude>
                                </excludes>
                            </enforceBytecodeVersion>
                        </rules>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
